--- a/r4babs4/week-2/study_after_workshop.qmd
+++ b/r4babs4/week-2/study_after_workshop.qmd
@@ -9,21 +9,13 @@ format:
     code-summary: "Answer - don't look until you have tried!"
 ---
 
-# Set up
-
-If you have just opened RStudio you will want to load the **`tidyverse`** package
-
-```{r}
-#| code-fold: false
-library(tidyverse)
-```
-
-# Exercises
 
 
-```{r}
-#| output: false
+🎬 Create a new Project that you will use to analyse your own data and which you will submit as your RStudio Project. Populate it with folders you will need. The Project does not need to be named with your exam number at this stage. Next week's workshop will cover how to change the name of Project.
 
-
-
-```
+🎬 Make a copy of the R script from the workshop that you will use to analyse your own data. Go through the script to tidy it up. You might need to:
+   -   collect together library statements at the top of the script
+   -   edit your comments for clarity
+   -   rename variables for consistency or clarity
+   -   remove house keeping or exploratory code or mark it for later removal
+   -   restyle code, add code section headers etc
