--- a/r4babs4/week-2/study_after_workshop.qmd
+++ b/r4babs4/week-2/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to consolidate this week"
-subtitle: "DA 2 Immunobiology: ..."
+subtitle: "Data Analysis 2: Immunobiology - Sample data analysis"
 toc: true
 toc-location: right
 format:
@@ -13,7 +13,8 @@ format:
 
 🎬 Create a new Project that you will use to analyse your own data and which you will submit as your RStudio Project. Populate it with folders you will need. The Project does not need to be named with your exam number at this stage. Next week's workshop will cover how to change the name of Project.
 
-🎬 Make a copy of the R script from the workshop that you will use to analyse your own data. Go through the script to tidy it up. You might need to:
+🎬 Make a copy of the R script from the workshop that you can use to analyse your own data. Go through the script to tidy it up. You might need to:
+
    -   collect together library statements at the top of the script
    -   edit your comments for clarity
    -   rename variables for consistency or clarity
